# iaw

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
cloudrun/agent_charts_signal/: .env.example  Dockerfile  requirements.txt  run_local.sh  start.sh
cloudrun/agent_trading/: .env.example  Dockerfile  README.md  requirements.txt  run_local.sh  start.sh
cloudrun/bybit_trading/: .env.example  Dockerfile  README.md  requirements.txt  run_local.sh  start.sh
cloudrun/case_graph_analytics/: .env.example  README.md  apply_schema.sh  ingest_once.sh  ingest_poll.sh  ingestion_workflow.md  neo4j_schema.cypher  requirements.txt
cloudrun/case_graph_analytics/case_graph_analytics/: __init__.py  __main__.py  apply_schema.py  config.py  embedder.py  gcs_source.py  neo4j_sink.py  runner.py  transform.py
grafana/metrics_margin/: .env.example  docker-compose.yml  start.sh
grafana/metrics_margin/collector/: Dockerfile  requirements.txt
grafana/metrics_margin/grafana/: entrypoint.sh
grafana/metrics_margin/sql/: 001_init.sql
grafana/metrics_margin/tests/: conftest.py  test_transforms.py
mac/agent_charts_screen/: .env.example  calibrate_layout.py  capture_and_upload.py  debug_tradingview_windows.py  list_windows.py  measure_crop.py  requirements.txt  window_capture.py  worker_server.py
shared/: pyproject.toml
shared/src/chart_vision_common/: __init__.py  constants.py  models.py
web_app/: .env.example  README.md  index.html  package-lock.json  package.json
web_app/src/: App.jsx  main.jsx  styles.css  theme.js
web_app/src/lib/: api.js  (+3 more)
(+59 files in other folders)
