[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-vision-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
